--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
 					<p>We envision communities where everyone has access to fresh, healthy food, where neighbors support each other through shared resources, and where sustainable growing practices become a standard part of everyday life.</p>
 				</div>
 				<div class="about-image">
-					<img src="/api/placeholder/600/400" alt="Family using grow tent">
+					<img src="/img" alt="Family using grow tent">
 				</div>
 			</div>
         </div>
@@ -940,7 +940,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="/api/placeholder/150/150" alt="Team Member">
+                        <img src="/img" alt="Team Member">
                     </div>
                     <h3>Alex Johnson</h3>
                     <p>Founder & Director</p>
@@ -952,7 +952,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="/api/placeholder/150/150" alt="Team Member">
+                        <img src="/img" alt="Team Member">
                     </div>
                     <h3>Maya Patel</h3>
                     <p>Agricultural Specialist</p>
@@ -964,7 +964,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="/api/placeholder/150/150" alt="Team Member">
+                        <img src="/img" alt="Team Member">
                     </div>
                     <h3>Carlos Rodriguez</h3>
                     <p>Community Outreach</p>
@@ -976,7 +976,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="/api/placeholder/150/150" alt="Team Member">
+                        <img src="/img" alt="Team Member">
                     </div>
                     <h3>Sam Thompson</h3>
                     <p>Technology & Support</p>
