--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/hero-background.jpg') center/cover no-repeat;">
         <div class="hero-content">
             <h1>Growing Food, Growing Community</h1>
             <p>GrowShare provides grow tents to families in need, empowering them to grow their own food and share with their community.</p>
@@ -833,7 +833,7 @@
 					<p>We envision communities where everyone has access to fresh, healthy food, where neighbors support each other through shared resources, and where sustainable growing practices become a standard part of everyday life.</p>
 				</div>
 				<div class="about-image">
-					<img src="https://tolerable.github.io/GROWSHARE/img" alt="Family using grow tent">
+					<img src="img/about-family.jpg" alt="Family using grow tent">
 				</div>
 			</div>
         </div>
@@ -921,7 +921,7 @@
         </div>
     </section>
 
-    <section class="cta">
+    <section class="cta" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/cta-background.jpg') center/cover no-repeat;">
         <div class="container">
             <div class="cta-content">
                 <h2>Help Us Grow Communities</h2>
@@ -940,7 +940,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="https://tolerable.github.io/GROWSHARE/img" alt="Team Member">
+                        <img src="img/team-director.jpg" alt="Team Member">
                     </div>
                     <h3>Alex Johnson</h3>
                     <p>Founder & Director</p>
@@ -952,7 +952,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="https://tolerable.github.io/GROWSHARE/img" alt="Team Member">
+                        <img src="img/team-specialist.jpg" alt="Team Member">
                     </div>
                     <h3>Maya Patel</h3>
                     <p>Agricultural Specialist</p>
@@ -964,7 +964,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="https://tolerable.github.io/GROWSHARE/img" alt="Team Member">
+                        <img src="img/team-outreach.jpg" alt="Team Member">
                     </div>
                     <h3>Carlos Rodriguez</h3>
                     <p>Community Outreach</p>
@@ -976,7 +976,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="https://tolerable.github.io/GROWSHARE/img" alt="Team Member">
+                        <img src="img/team-tech.jpg" alt="Team Member">
                     </div>
                     <h3>Sam Thompson</h3>
                     <p>Technology & Support</p>
